maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:49: error: value ! is not a member of Boolean
  if ( estFaceMur() && !isDirectionFree2(Direction.OUEST) && gau! ){
                                                                ^